added views, helpers, seed file

--- a/app/views/opportunites/index.html.erb
+++ b/app/views/opportunites/index.html.erb
@@ -2,6 +2,6 @@
 
 <div>
   <% @opportunities.each do |opportunity| %>
-    <div><%= opportunity.to_s %></div>
+    <div><%= opportunity.title %></div>
   <% end %>
 </div>
