--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -27,7 +27,7 @@ primarily blazes, badgers, and pandas, usually carry <br>
 a congenital defect similar to Waardenburg syndrome: <br>
 a broader skull, white face markings, and also partial or total deafness.</p>
 
-<p>Aging and geriatric ferrets need attention and responsible care. <br>
+<p>Aging and geriatric ferrets need special attention and care. <br>
 Commercially-bread ferrets are susceptible to several distinct health issues, <br>
 particularly cancers affecting the adrenal glands, pancreas, and lymphatic system. <br>
 With proper care, their average life span is 7 to 10 years.</p>
