testing associations, modified seed file

--- a/app/views/opportunites/index.html.erb
+++ b/app/views/opportunites/index.html.erb
@@ -1,7 +1,5 @@
 <h1>Opportunities</h1>
 
-<div>
   <% @opportunities.each do |opportunity| %>
-    <div><%= opportunity.title %></div>
+    <div><%= link_to opportunity.title, opportunity_path(opportunity) %></div>
   <% end %>
-</div>
