--- a/app/views/owners/index.html.erb
+++ b/app/views/owners/index.html.erb
@@ -2,8 +2,6 @@
 
 <div>
   <% @owners.each do |owner| %>
-    <div><%= owner.to_s %></div>
-    <div><%= owner.quantity %> ferrets</div>
-    <div><%= owner.zipcode %></div>
+    <div><%= link_to owner.to_s, owner_path(owner) %></div>
   <% end %>
 </div>
