--- a/app/views/opportunites/new.html.erb
+++ b/app/views/opportunites/new.html.erb
@@ -5,7 +5,7 @@
   <%= text_field_tag :'opportunity[title]' %><br>
 
   <label>Briefly Describe the Circumstance:</label><br>
-  <%= text_area_tag :'opportunity[description]' %><br>
+  <%= text_area_tag :'opportunity[circumstance]' %><br>
 
 
 
