create methods in ferrets, opportunities

--- a/app/views/opportunites/new.html.erb
+++ b/app/views/opportunites/new.html.erb
@@ -2,10 +2,10 @@
 
 <%= form_tag opportunities_path do %>
   <label>Title:</label><br>
-  <%= text_field_tag :'opportunity[title]' %><br>
+  <%= text_field_tag :title %><br>
 
-  <label>Briefly Describe the Circumstance:</label><br>
-  <%= text_area_tag :'opportunity[circumstance]' %><br>
+  <label>Describe the Circumstance:</label><br>
+  <%= text_area_tag :circumstance %><br>
 
 
 
