--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @owner.first_name %> <%= @owner.last_name %></h1>
+<h2><%= @owner.to_s %></h2>
 <p><%= @owner.email %></p>
 <p><%= @owner.phone %></p>
 <p>Location: <%= @owner.zipcode %></p>
