--- a/app/views/ferrets/new.html.erb
+++ b/app/views/ferrets/new.html.erb
@@ -1,9 +1,30 @@
 <h2>Add a Ferret</h2>
 
+<%= form_for(@ferret) do |f| %>
 
+  <label>Ferret name:</label><br>
+  <%= f.text_field :name %><br>
 
+  <label>Sex:</label><br>
+  <%= f.text_field :sex %><br>
 
+  <label>Color:</label><br>
+  <%= f.text_field :color %><br>
 
+  <label>Age:</label><br>
+  <%= f.text_field :age %><br>
+  
+  <label>Health:</label><br>
+  <%= f.text_field :health %><br>
+
+  <label>Description:</label><br>
+  <%= f.text_area :description %><br>
+
+  <label>Found a Home?</label><br>
+  <%= f.check_box :home, {}, "true", "false" %><br>
+  
+  <%= f.submit %>
+<% end %>
 
 
 <br><br>
@@ -15,6 +36,5 @@
 <p>You may also descrbe a pattern:</p>
 <br><br>
 <b>Blaze, Mitt, Mutt, Panda, Point, Roan, Solid, Standard, and Striped/Patterned.</b>
-<br><br>
 <br><br>
 <em>Example: Gizmo is a Black Mitt ferret, and Coconut is a Chocolate Blaze ferret.</em>
