added validations to ferret, opp models

--- a/app/views/ferrets/new.html.erb
+++ b/app/views/ferrets/new.html.erb
@@ -33,7 +33,7 @@
 <br><br>
 <b>Albino, Black, Black Sable, Champagne, Chocolate, Cinnamon, Dark-Eyed White, and Sable.</b>
 <br><br>
-<p>You may also descrbe a pattern:</p>
+<p>You may also describe a pattern:</p>
 <br><br>
 <b>Blaze, Mitt, Mutt, Panda, Point, Roan, Solid, Standard, and Striped/Patterned.</b>
 <br><br>
