updated Owner validations

--- a/app/views/owners/new.html.erb
+++ b/app/views/owners/new.html.erb
@@ -17,7 +17,7 @@
   <label>Zip Code:</label><br>
   <%= f.text_area :zipcode %><br>
 
-  <label>How many ferrets do you have?</label><br>
+  <label>How many ferrets do you own?</label><br>
   <%= f.text_area :quantity %><br>
 
   <label>Password:</label><br>
