--- a/app/views/ferrets/index.html.erb
+++ b/app/views/ferrets/index.html.erb
@@ -2,6 +2,7 @@
 
 <div>
   <% @ferrets.each do |ferret| %>
-    <div><%= link_to ferret.name, ferret_path(ferret) %></div>
+    <%= link_to ferret.name, ferret_path(ferret) %>
+    <%= ferret.owner.to_s %><br>
   <% end %>
 </div>
