--- a/app/views/owners/busyness.html.erb
+++ b/app/views/owners/busyness.html.erb
@@ -1,4 +1,4 @@
-<h2><%= @owner.first_name %> has a Busyness of <%= @owner.quantity %> Ferrets</h2>
+<h2><%= @owner.to_s %> has a Busyness of <%= @owner.quantity %> Ferrets</h2>
 
 <div>
   <% @owner.ferrets.each do |ferret| %>
