--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -1,5 +1,4 @@
-<h2><%= @owner.to_s %></h2>
-<p><%= @owner.email %></p>
+<h2><%= @owner.first_name %> <%= @owner.last_name %></h2>
 <p><%= @owner.phone %></p>
 <p>Location: <%= @owner.zipcode %></p>
 <p>Ferret(s): <%= @owner.quantity %></p>
