--- a/app/views/owners/edit.html.erb
+++ b/app/views/owners/edit.html.erb
@@ -1,25 +1,27 @@
+<h2>Sign Up</h2>
+
 <%= form_for(@owner) do |f| %>
 
   <label>First Name:</label><br>
   <%= f.text_field :first_name %><br>
-
+  <br>
   <label>Last Name:</label><br>
   <%= f.text_field :last_name %><br>
-
+  <br>
   <label>Email:</label><br>
-  <%= f.text_area :email %><br>
-
-  <label>Phone:</label><br>
-  <%= f.text_area :phone %><br>
-
+  <%= f.email_field :email %><br>
+  <br>
+  <label>Phone (9 digits):</label><br>
+  <%= f.text_field :phone %><br>
+  <br>
   <label>Zip Code:</label><br>
-  <%= f.text_area :zipcode %><br>
-
+  <%= f.text_field :zipcode %><br>
+  <br>
   <label>How many ferrets do you own?</label><br>
-  <%= f.text_area :quantity %><br>
-
+  <%= f.text_field :quantity %><br>
+  <br>
   <label>Password:</label><br>
-  <%= f.text_area :password_digest %><br>
-
+  <%= f.password_field :password_digest %><br>
+  <br>
   <%= f.submit %>
 <% end %>
