--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,3 +1,5 @@
 <h1>Ferret Adoption</h1>
 
-<h6>A Ruby on Rails application</h6>
+<h4>A Ruby on Rails application.</h4>
+
+Please <a href="">Sign Up</a> or <a href="">Log In.</a>
