sessions/welcome controllers and related views

--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -2,4 +2,4 @@
 
 <h4>A Ruby on Rails application.</h4>
 
-Please <a href="">Sign Up</a> or <a href="">Log In.</a>
+Please <a href="/owners/new">Sign Up</a> or <a href="/sessions/new">Log In.</a>
