--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,7 @@
-<h1>Hi, <%= @owner.name %></h1>
+<h1>Hello, <%= @owner.first_name %></h1>
+
+<p>Thank you for signing up!</p>
+<br>
 
 <%= form_tag ({controller: 'sessions', action: 'destroy', method: 'post'}) do %>
   <input type=submit value='logout'>
