--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -14,6 +14,4 @@ A male ferret is called a hob; a female ferret is a jill. A spayed female is a s
 <p>Ferrets with a white stripe on their face or a fully white head, primarily blazes, badgers, and pandas, usually carry a congenital defect similar to Waardenburg syndrome: a broader skull, white face markings, and also partial or total deafness.</p>
 
 <p><b>Aging and geriatric ferrets need special attention and care.</b> <br>
-Commercially-bread ferrets are susceptible to several distinct health issues, particularly cancers affecting the adrenal glands, pancreas, and lymphatic system. With proper care, their average life span is 7 to 10 years.</p>
-<br><br>
-<em>Source: Wikipedia</em>
+Commercially-bread ferrets are susceptible to several distinct health issues, particularly cancers affecting the adrenal glands, pancreas, and lymphatic system. With proper care, their average life span is 7 to 10 years.</p><em>Source: Wikipedia</em>
