--- a/app/views/opportunities/show.html.erb
+++ b/app/views/opportunities/show.html.erb
@@ -1,6 +1,6 @@
 <h2><%= @opportunity.title %></h2>
 <p><%= @opportunity.circumstance %></p>
-<em><%= @opportunity.updated_at %></em>
+<p>Shared by <%= @opportunity.owner.first_name %> on <%= @opportunity.updated_at %>.</p>
 <br><br>
 <% if @opportunity.active %>
   This case is still active.
