--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -6,7 +6,7 @@
 <div>
   <div style='width: 300px;'>
     <img  style='width: 300px' src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Lady_with_an_Ermine_-_Leonardo_da_Vinci_-_Google_Art_Project.jpg/1920px-Lady_with_an_Ermine_-_Leonardo_da_Vinci_-_Google_Art_Project.jpg">
-  </div>
-  <h6>* White ferrets were favored in the Middle Ages. Leonardo da Vinci's 1490 painting "Lady with an Ermine" is likely mislabelled; the animal was probably a ferret, not a stoat/ermine. </h6>
+  </div><br>
+  <h6>* White ferrets were favored in the Middle Ages. Leonardo da Vinci's 1490 painting "Lady with an Ermine" is likely mislabelled; the animal was probably a ferret, not a stoat/ermine.</h6>
 </div>
 
