forms, errors, messages

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,7 @@
 
 .field_with_errors {
   padding: 2px;
-  background-color: red;
+  background-color: crimson;
   display: table;
 }
 
@@ -53,4 +53,16 @@ a:hover {
 /* selected link */
 a:active {
   color: crimson;
+}
+
+div.polaroid {
+  width: 300px;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 25px;
+}
+
+div.image_text {
+  text-align: left;
+  padding: 10px 20px;
 }
