--- a/app/views/opportunities/_form.html.erb
+++ b/app/views/opportunities/_form.html.erb
@@ -2,10 +2,10 @@
 
 <%= form_for(@opportunity) do |f| %>
 
-  <b><label>Title:</label></b><br>
+  <b><label>Title:</label></b>
   <%= f.text_field :title, required: true %><br>
   <br>
-  <b><label>Describe the Circumstance:</label></b><br>
+  <b><label>Describe Circumstance:</label></b><br>
   <%= f.text_area :circumstance, required: true %><br>
   <br>
   <b><label>Active case?</label></b>&nbsp;&nbsp;<%= f.check_box :active, {}, "true", "false" %><br>
