--- a/app/views/owners/new.html.erb
+++ b/app/views/owners/new.html.erb
@@ -1,27 +1,3 @@
 <h1>Sign Up</h1>
 
-<%= form_for @owner, controller: 'owners', action: 'create' do |f| %>
-
-  <label>First Name:</label><br>
-  <%= f.text_field :first_name %><br>
-  <br>
-  <label>Last Name:</label><br>
-  <%= f.text_field :last_name %><br>
-  <br>
-  <label>Email:</label><br>
-  <%= f.email_field :email %><br>
-  <br>
-  <label>Phone (9 digits):</label><br>
-  <%= f.text_field :phone %><br>
-  <br>
-  <label>Zip Code:</label><br>
-  <%= f.text_field :zipcode %><br>
-  <br>
-  <label>How many ferrets do you own?</label><br>
-  <%= f.text_field :quantity %><br>
-  <br>
-  <label>Password:</label><br>
-  <%= f.password_field :password_digest %><br>
-  <br>
-  <%= f.submit "create" %>
-<% end %>
+<%= render 'form' %>
