--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,17 @@
  
   <body>
     <div class="container">
-
       <div class="main-content">
+
+        <% if flash[:message] %>
+          <div class="alert alert-warning">
+            <%= flash[:message] %>
+          </div>
+        <% end %>
+        
         <%= yield %>
       </div>
-      
+
     </div>
 
   </body>
