--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FerretAdoption</title>
+    <title>Ferret Adoption</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -56,7 +56,12 @@
 
         <%= yield %>
       </div>
+    
     </div>
+
+      <footer class="container-fluid">
+        <h6></h6>
+      </footer>
 
   </body>
 
