--- a/app/views/owners/edit.html.erb
+++ b/app/views/owners/edit.html.erb
@@ -3,3 +3,7 @@
 <%= render 'form' %>
 
 <br><br>
+
+<%= form_tag ({controller: 'owners', action: 'destroy', method: 'post'}) do %>
+  <input type=submit value='delete'>
+<% end %>
