--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,9 +1,11 @@
 <h1>Hello, <%= @owner.first_name %>.</h1>
 
-<p>Thank you for signing up! <i class='far fa-heart'></i></p>
+<p>Thank you for signing up! <i class='far fa-heart' style='color:crimson'></i></p>
 <br>
-<p>Please list the ferret(s) you currently own, and describe whether you would like to adopt more or rehome them.</p>
-<br>
+<p>Begin here by listing the ferret(s) you currently own.</p>
+<br><br>
+/* <%= link_to "Add Ferret", new_owner_ferret_path(@ferret) %> */
+
 
 <%= form_tag ({controller: 'sessions', action: 'destroy', method: 'post'}) do %>
   <input type=submit value='logout'>
