added updated to home, index, email validations

--- a/app/views/ferrets/index.html.erb
+++ b/app/views/ferrets/index.html.erb
@@ -1,5 +1,7 @@
 <h1>All Ferrets</h1>
 
+/* <%= link_to 'Add Ferret', new_owner_ferret_path %> */
+
 <div>
   <% @ferrets.each do |ferret| %>
     <%= link_to ferret.name, ferret_path(ferret) %><br>
