added questionnaire page, minor edits to views

--- a/app/views/ferrets/index.html.erb
+++ b/app/views/ferrets/index.html.erb
@@ -1,6 +1,6 @@
 <h1>All Ferrets</h1>
 
-/* <%= link_to 'Add Ferret', new_owner_ferret_path %> */
+<%= link_to 'Add Ferret', new_owner_ferret_path %>
 
 <div>
   <% @ferrets.each do |ferret| %>
