--- a/app/views/ferrets/show.html.erb
+++ b/app/views/ferrets/show.html.erb
@@ -1,4 +1,4 @@
-<h2><%= @ferret.name %></h2>
+<h2><%= @ferret.name %><i class='fas fa-paw' style='font-size:36px'></i></h2>
 <p><%= @ferret.sex %></p>
 <p><%= @ferret.age %></p>
 <p><%= @ferret.color %></p>
