--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,12 +30,12 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/">Home</a></li>
+        <li class="active"><a href="/static/home">Home</a></li>
         <li><a href="/static/about">About</a></li>
         <li><a href="/ferrets">Ferrets</a></li>
         <li><a href="/opportunities">Opportunities</a></li>
         <li><a href="/owners">Owners</a></li>
-      
+        <li><a href="/questions">Questionnaire</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/owners/new"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
