--- a/app/views/owners/index.html.erb
+++ b/app/views/owners/index.html.erb
@@ -1,5 +1,8 @@
 <h1>Owners</h1>
 
+<p>Owners are advised not to accept an adoption request without a response to our screening 
+questionnaire.</p>
+
 <div>
   <% @owners.each do |owner| %>
     <h3>
