--- a/app/views/opportunities/_form.html.erb
+++ b/app/views/opportunities/_form.html.erb
@@ -12,9 +12,10 @@
   <em>All cases are marked as active until you deactivate them.</em>
   <br><br>
   <%= f.hidden_field :owner_id %>
+  <br>
   <%= f.submit "Submit" %>
 <% end %>
 
 <br>
 <br>
-<b>Sales of any kind are not permitted.</b>
+<b>Sales or rehoming fees of any kind are not permitted, because all ferrets are vetted before bringing them home.</b>
