--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -1,6 +1,6 @@
 <h1>About Ferrets</h1>
 
-<h2>Latin name: <em>Mustela furo</em></h2>
+<h2>Latin name: <em>Mustela furo</em> <i class='fas fa-paw' style='font-size:36px'></i></h2>
 
 <p>Ferrets are a domestic species of small mustelid. It is thought to be a descendant of the European polecat, a mammal belonging to the same genus as the weasel. Analysis of mitochondrial DNA suggests that ferrets were domesticated around 2,500 years ago.</p>
 
