--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,11 +1,10 @@
 <h1>Hello, <%= @owner.first_name %>.</h1>
 
-<p>Thank you for signing up! <i class='far fa-heart' style='color:crimson'></i></p>
+<p>Thank you for signing up! <i class='fas fa-heart' style='color:crimson'></i></p>
 <br>
 <p>Begin here by listing any ferret(s) you currently own.</p>
+<strong><%= link_to 'Add Ferret', new_ferret_path %></strong>
 <br><br>
-
-
 
 <%= form_tag ({controller: 'sessions', action: 'destroy', method: 'post'}) do %>
   <input type=submit value='logout'>
