--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -48,6 +48,7 @@ a:visited {
 /* mouse over link */
 a:hover {
   color: maroon !important;
+  text-decoration: none !important;
 }
 
 /* selected link */
