--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/static/home">Home</a></li>
-        <li><a href="/static/about">About</a></li>
+        <li><a href="/about">About</a></li>
         <li><a href="/ferrets">Ferrets</a></li>
         <li><a href="/opportunities">Opportunities</a></li>
         <li><a href="/owners">Owners</a></li>
