--- a/app/views/owners/index.html.erb
+++ b/app/views/owners/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Owners</h1>
 
-<p>Owners are advised not to accept an adoption request without a response to our screening 
+<p>Owners are advised not to accept an adoption request without a response to the screening 
 questionnaire.</p>
 
 <div>
