--- a/app/views/ferrets/_form.html.erb
+++ b/app/views/ferrets/_form.html.erb
@@ -7,7 +7,7 @@
 
 <%= render 'errors' %>
 
-<%= form_for(@ferret) do |f| %>
+<%= form_for([@owner, @ferret]) do |f| %>
 
   <b><label>Ferret name:</label></b>
   <%= f.text_field :name, required: true %><br>
@@ -27,7 +27,6 @@
   <b><label>Description:</label></b><br>
   <%= f.text_area :description, required: true %><br>
   <b><label>Found a Home?</label></b>&nbsp;&nbsp;<%= f.check_box :home, {}, "true", "false" %><br>
-  <%= f.hidden_field :owner_id %>
   <br>
-  <%= f.submit "Submit" %>
+  <%= f.submit "Submit" %> <i class='fas fa-paw' style='font-size:24px'></i>
 <% end %>
