--- a/app/views/ferrets/_form.html.erb
+++ b/app/views/ferrets/_form.html.erb
@@ -28,5 +28,5 @@
   <%= f.text_area :description, required: true %><br>
   <b><label>Found a Home?</label></b>&nbsp;&nbsp;<%= f.check_box :home, {}, "true", "false" %><br>
   <br>
-  <%= f.submit "Submit" %> <i class='fas fa-paw' style='font-size:24px'></i>
+  <%= f.submit "Submit" %>
 <% end %>
