--- a/app/views/opportunities/new.html.erb
+++ b/app/views/opportunities/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Add an Opportunity</h1>
+<h1>Add an Opportunity <i class='fas fa-heart' style='font-size:24px; color:crimson'></i></h1>
 
 <%= render 'form' %>
 
