--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -3,6 +3,6 @@
   <div class="polaroid">
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Lady_with_an_Ermine_-_Leonardo_da_Vinci_-_Google_Art_Project.jpg/1920px-Lady_with_an_Ermine_-_Leonardo_da_Vinci_-_Google_Art_Project.jpg" alt="Lady with an Ermine" style="width: 300px">
     <div class="image_text">
-      <h6>White ferrets were favored in the Middle Ages. Leonardo da Vinci's 1490 painting "Lady with an Ermine" is likely mislabelled; the animal was probably a ferret, not a stoat/ermine. Source: Wikipedia Commons, public domain.</h6>
+      <h6>White ferrets were favored in the Middle Ages. Leonardo da Vinci's 1490 painting "Lady with an Ermine" is likely mislabelled; the animal was probably a ferret, not a summer stoat/winter ermine. Wikipedia Commons; public domain.</h6>
     </div>
   </div>
