--- a/app/views/static/questions.html.erb
+++ b/app/views/static/questions.html.erb
@@ -1,9 +1,9 @@
 <h1>Questionnaire</h1>
 
-<p>Thanks for wanting to adopt! Answering this brief questionnaire will help us learn which ferret will best fit your family and determine if you need more info/support in any area.</p>
+<p>Thanks for wanting to adopt! <i class='fas fa-heart' style='color:crimson'></i> Answering this brief questionnaire will help us learn which ferret will best fit your family and determine if you need more info/support in any area.</p>
 
 <b>YOU WILL BE CONTACTED BY PHONE. Please be ready to answer every question to the best of your ability. This is for the protection of the ferrets first and foremost, the adopter and adoptee second.</b>
-
+<br><br>
 <ol type="1">
 <li> This application is defaulted to owners that have at least one ferret. If you’ve had ferrets before but don’t now, can you tell us what happened to your pets? If you’ve never had ferrets, have you been around any and can you describe what you know about them?</li> 
 
@@ -23,27 +23,22 @@
 
 <li> Do you have a specific food you plan to use? <em>(We’re happy to offer suggestions if needed and you will get a sample of what the ferret currently eats.)</em></li>
 
-<li> Do you know how to clean ears, clip nails and brush teeth? <b>We will provide you with safety/care instructions.</b> We may ask your knowledge of a few more basics: </li>
+<li> Do you know how to clean ears, clip nails and brush teeth? <b>We will provide you with safety/care instructions.</b> We may test your knowledge with a few more questions: </li>
 <ul>
-<li> Would you select a peppermint scented shampoo to bathe your ferret with weekly? Why or why not?</li> 
-<li> What is an Alpha TRAK 2? </li>
-<li> What kind of litter box/pan material would you plan to/do you use? </li>
-<li> Do ferrets benefit from fruits and vegetables? Is it okay to feed those to them? </li>
-<li> Would a tall climbing cat tree be a suitable birthday gift for your ferret? Why or why not? </li>
-<li> What kinds of materials are best left unobtainable to your ferrets for risk of blockage if ingested?What steps would you take if your ferret did ingest those materials? </li>
+<br>
+<li> Would you select a peppermint scented shampoo to bathe your ferret with weekly?</li> 
+<li> What kind of litter box/pan material would you use? </li>
+<li> Do ferrets benefit from fruits and vegetables? What food would you feed them? </li>
+<li> Would a tall climbing cat tree be a suitable birthday gift for your ferret?</li>
+<li> What kinds of materials are best left unobtainable to your ferrets for risk of blockage if ingested? What steps would you take if your ferret did ingest those materials? </li>
 <li> Are stairs a good place for a ferret to play? How can they be made safe places? </li>
 <li> What are some emergency items to have on hand for your ferret? </li>
 <li> If your ferret is suffering from a seizure or unconsciousness from low blood sugar, what steps would you take to help him/her? </li>
 <li> What should you do prior to laundering your clothes or cooking dinner? Do these rooms have doors or barriers to block your ferrets from entering? </li>
-<li> Are glass water bottles the best kind of drinking source for your ferret? </li>
-<li> Is senior-dog food okay to feed your ferret? </li>
 <li> Would your ferrets appreciate wood shavings as their bedding? What would be appropriate comfort items for them to have? </li>
 <li> Why are recliners not appropriate items in areas that your ferrets share with you? </li>
 <li> If you're comfortable in summer season, at what temperatures is it okay to leave your air conditioner off with ferrets in your home?</li>
 </ul>
 </ol>
 <br><br>
-
-<p>Thank you in advance for preparing and providing this info! <i class='fas fa-heart' style='color:crimson'></i></p>
-<br><br>
-<em>Source: The Ferret Association of Connecticut, Inc. Edited for brevity.</em>
+<h6>Source: The Ferret Association of Connecticut, Inc.</h6>
