--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,7 +21,7 @@
 }
 
 body {
-  height: 100vmax;
+  min-height: 100vh;
   background-color: linen; /* For browsers that do not support gradients */
   background-image: linear-gradient(linen, sienna);
 }
