--- a/app/views/opportunities/_form.html.erb
+++ b/app/views/opportunities/_form.html.erb
@@ -1,6 +1,6 @@
 <%= render 'errors' %>
 
-<%= form_for(@opportunity) do |f| %>
+<%= form_for([@owner, @opportunity]) do |f| %>
 
   <b><label>Title:</label></b>
   <%= f.text_field :title, required: true %><br>
