--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -1,6 +1,6 @@
 <h1>About Ferrets</h1>
 
-<h2>Latin name: <em>Mustela furo</em> <i class='fas fa-paw' style='font-size:36px'></i></h2>
+<h2>Latin name: <em>Mustela furo</em> <i class='fas fa-paw' style='font-size:30px'></i></h2>
 
 <p>Ferrets are a domestic species of small mustelid. It is thought to be a descendant of the European polecat, a mammal belonging to the same genus as the weasel. Analysis of mitochondrial DNA suggests that ferrets were domesticated around 2,500 years ago.</p>
 
@@ -14,4 +14,6 @@ A male ferret is called a hob; a female ferret is a jill. A spayed female is a s
 <p>Ferrets with a white stripe on their face or a fully white head, primarily blazes, badgers, and pandas, usually carry a congenital defect similar to Waardenburg syndrome: a broader skull, white face markings, and also partial or total deafness.</p>
 
 <p><b>Aging and geriatric ferrets need special attention and care.</b> <br>
-Commercially-bread ferrets are susceptible to several distinct health issues, particularly cancers affecting the adrenal glands, pancreas, and lymphatic system. With proper care, their average life span is 7 to 10 years.</p><em>Source: Wikipedia</em>
+Commercially-bread ferrets are susceptible to several distinct health issues, particularly cancers affecting the adrenal glands, pancreas, and lymphatic system. With proper care, their average life span is 7 to 10 years.</p>
+<br>
+<h6>Source: Wikipedia</h6>
