--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,7 +1,7 @@
-<h1>Hello, <%= @owner.first_name %>.</h1>
-
-<p>Thank you for signing up! <i class='fas fa-heart' style='color:crimson'></i></p>
+<h1>Welcome, <%= @owner.first_name %>.</h1>
 <br>
-<p>Begin here by listing any ferret(s) you currently own.</p>
+<p>What would you like to do?</p>
 <br>
 <button style='font-size:16px'><%= link_to 'Add Ferret', new_owner_ferret_path(@owner) %> <i class='fas fa-paw'></i></button>
+<br><br><br>
+<button style='font-size:16px'><%= link_to 'Add Opportunity', new_owner_opportunity_path(@owner) %> <i class='fas fa-heart' style='color:crimson'></i></button>
